Bug 1896545 - If configured, always allow empty trash or inbox expunge to occur on shutdown. r=welpy-cw,mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D224062

--HG--
extra : amend_source : a549db0da2f46f52259e1c8719e1096966280916